tests/ui/diagnostic-not-implemented-immutable.nightly.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> $DIR/diagnostic-not-implemented-immutable.rs:16:23
   |
16 |     takes_immutable::<NotZerocopy>();
   |                       ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Immutable` is not implemented for `NotZerocopy`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `NotZerocopy`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 128 others
note: required by a bound in `takes_immutable`
  --> $DIR/diagnostic-not-implemented-immutable.rs:19:23
   |
19 | fn takes_immutable<T: Immutable>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_immutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
